# CloudLine2Plane

./: .gitignore  CMakeLists.txt  README.md
config/: hdl32_real.yaml  hdl32_sim.yaml  hdl64_real.yaml  hdl64_sim.yaml  segcomp.yaml  vlp16_real.yaml  vlp16_sim.yaml
evaluations/: calcPlaneRMSE.m  compare_GT_PE_rmse.m  findCorrespondences.m  getPlaneNormal.m  getPointsPlaneDists.m  loadGeo.m  plotPlane.m  test_GT_rmse.m  test_PE_rmse.m
include/: cloud_projection.h  common.h  fstruct.h  line_clustering.h  line_extraction.h  line_feature.h  plane_extraction.h  plane_params.h  projection_params.h  save_result.h  segcomp_loader.h  tictoc.h  visualizer.h
scripts/: screenshot-1655094427.cam  screenshot-1655101870.cam  screenshot-1655101980.cam  screenshot-1655103003.cam  script_realistic.sh  script_realistic_ptx.sh  script_segcomp.sh  scripts.sh
src/: cloudline2plane.cpp  cloudline2plane_proj.cpp  line_clustering.cpp  line_extraction.cpp  line_feature.cpp  plane_extraction.cpp  visPlaneCloud.cpp  visualizer.cpp
